Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19564

[SHELL32] File deletion dialog: missing keyboard navigation

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-8002-gbbb3b00-x86-gcc-lin-dbg

      • Delete a File
      • In the Confirmation Dialog, give focus to a button with TAB
      • Left / Right keyboard keys have no effect while they should move focus from one button to the other.

      Nothing in log

      Code of interest :

      DialogBoxParamW calls DIALOG_DoDialogBox which calls IsDialogMessageW https://git.reactos.org/?p=reactos.git;a=blob;f=win32ss/user/user32/windows/dialog.c;hb=bbb3b00398822b1c6853acce1c82d5aeb09b6012#l2616 which manage Up/Down/Left/Right/Tab keys

      Problem comes from

      hwndNext = GetNextDlgGroupItem(hDlg, hwndFirst, fPrevious);

      leading to hwndNext == hwndFirst (looping on the same control as "next").

      Faulty code is clearly explained here : https://jira.reactos.org/browse/CORE-19327?focusedId=140832&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-140832 

      All .rc files have to be modified so that WS_GROUP is only set to the 1st button. Here comes the Patch for the ec-US.rc that fixes the problem (similarly to the past https://github.com/reactos/reactos/pull/6049 for NETCFGX which was affected in the exact same way).

      Attachments

        Issue Links

          Activity

            People

              MayTheChicken MayTheChicken
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: